@@ -1,7 +1,5 @@
 package net.akaritakai.aoc2020;
 
-import com.google.common.collect.Sets;
-
 import java.util.*;
 import java.util.regex.Pattern;
 
@@ -56,9 +54,11 @@ public class Puzzle19 extends AbstractPuzzle {
             for (var y = 1; y < size; y++) {
                 for (var x = 0; x < size - y; x++) {
                     for (var i = 0; i < y; i++) {
-                        for (var need : Sets.cartesianProduct(cyk(i,x), cyk(y-i-1, x+i+1))) {
-                            for (var rule : rules.getOrDefault(need, Set.of())) {
-                                cyk(y, x).add(rule);
+                        for (var n1 : cyk(i, x)) {
+                            for (var n2 : cyk(y-i-1, x+i+1)) {
+                                for (var rule : rules.getOrDefault(List.of(n1, n2), Collections.emptySet())) {
+                                    cyk(y, x).add(rule);
+                                }
                             }
                         }
                     }
